--- a/.gitignore/.gitignore
+++ b/.gitignore/.gitignore
@@ -59,6 +59,9 @@ ExportedObj/
 # Unity3D generated meta files
 *.pidb.meta
 *.pdb.meta
+*.png.meta
+*.jpg.meta
+*.meta
 
 # Unity3D Generated File On Crash Reports
 sysinfo.txt
