--- a/HealersMight.csproj
+++ b/HealersMight.csproj
@@ -110,6 +110,7 @@
     <Compile Include="Assets\Scripts\Inventory\ItemBase.cs" />
     <Compile Include="Assets\Scripts\Inventory\Jewelry.cs" />
     <Compile Include="Assets\Scripts\Inventory\Misc.cs" />
+    <Compile Include="Assets\Scripts\Inventory\Shield.cs" />
     <Compile Include="Assets\Scripts\Inventory\Weapon.cs" />
     <Compile Include="Assets\Scripts\Menus\CharacterMenu.cs" />
     <Compile Include="Assets\Scripts\Menus\MainMenu.cs" />
@@ -121,6 +122,14 @@
     <Compile Include="Assets\Scripts\PartyMembers\Classes\Warrior.cs" />
     <Compile Include="Assets\Scripts\PartyMembers\Party.cs" />
     <Compile Include="Assets\Scripts\PartyMembers\PartyManager.cs" />
+    <Compile Include="Assets\Scripts\Rds\EventArgs.cs" />
+    <Compile Include="Assets\Scripts\Rds\Interfaces.cs" />
+    <Compile Include="Assets\Scripts\Rds\RDSCreatableObject.cs" />
+    <Compile Include="Assets\Scripts\Rds\RDSNullValue.cs" />
+    <Compile Include="Assets\Scripts\Rds\RDSObject.cs" />
+    <Compile Include="Assets\Scripts\Rds\RDSRandom.cs" />
+    <Compile Include="Assets\Scripts\Rds\RDSTable.cs" />
+    <Compile Include="Assets\Scripts\Rds\RDSValue.cs" />
     <Compile Include="Assets\Scripts\Spells\Ability.cs" />
     <Compile Include="Assets\Scripts\Spells\Components\BaseComponent.cs" />
     <Compile Include="Assets\Scripts\Spells\Components\HealOverTime.cs" />
@@ -134,6 +143,7 @@
   <ItemGroup>
     <None Include="Assets\Standard Assets\CrossPlatformInput\CrossPlatformInputGuidelines.txt" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
 </Project>
